# FinApp-Personal

./: .env.template  .gitignore  ARCHITECTURE.md  PROJECT_STATUS.md  README.md  SPECIFICATION.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: .keep
src/finapp/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  money.py
src/finapp/db/: __init__.py  base.py  engine.py  seed.py
src/finapp/gui/: __init__.py  app.py
src/finapp/gui/dialogs/: __init__.py  account_dialog.py  institution_dialog.py  transaction_dialog.py
src/finapp/gui/panels/: accounts.py  dashboard.py  transactions.py
src/finapp/integrations/: __init__.py  fx.py  llm.py  market_data.py
src/finapp/integrations/parsers/: __init__.py  base.py  csv_parser.py  ofx_parser.py  pdf_parser.py
src/finapp/models/: __init__.py  account.py  ai.py  budget.py  category.py  currency.py  enums.py  investment.py  mixins.py  reconciliation.py  transaction.py
src/finapp/services/: __init__.py  account_service.py  dto.py  import_service.py  reconciliation_service.py
tests/: conftest.py  test_account_service.py  test_csv_import.py  test_money.py
